--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,8 +11,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/consort_group
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: postgres
+    password: 1
     hikari:
       maximum-pool-size: 10
 
@@ -36,9 +36,37 @@ eureka:
   client:
     enabled: false
 
+# Бизнес-топики
 kafka:
   certificate-issuance: certificate-issuance-topic
+
+user:
+  service:
+    url: http://localhost:8081
+
+notification:
+  service:
+    url: http://localhost:8082
+
+course:
+  service:
+    url: http://localhost:8084
 
 jasper:
   report-template-directories:
     reportsDir: classpath:templates/
+
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    docExpansion: full
+    defaultModelsExpandDepth: 1
+    defaultModelExpandDepth: 3
+    defaultModelRendering: schema
+    operationsSorter: method
+    tagsSorter: alpha
+    use-root-path: true
+  model-converters:
+    pageable-converter:
+      enabled: true
