--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -68,8 +68,8 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
-    service-url:
-      defaultZone: ${EUREKA_DEFAULT_ZONE:http://eureka-service:8762/eureka/}
+    serviceUrl:  
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://eureka-service:8762/eureka/}
   instance:
     prefer-ip-address: true
     instance-id: ${HOSTNAME}:${server.port}
