--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -69,11 +69,9 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
-#      defaultZone: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE:http://eureka-service:8762/eureka/} //TODO Почему не работает ?!
-      defaultZone: http://164.92.247.120:8761/
+      defaultZone: ${EUREKA_DEFAULT_ZONE:http://eureka-service:8762/eureka/}
   instance:
     prefer-ip-address: true
-    instance-id: ${HOSTNAME}:${server.port}
 
 management:
   endpoints:
